# meowverter

./: .gitignore  README.md  build-release.bat  run.bat
scripts/: release.ps1
src-tauri/: Cargo.toml  gen_icon.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: app.js  index.html  style.css
